--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Document</title>
-    
-</head>
-<body>
+    <title>Marcho</title>
 
-<script src="js/main.min.js"></script>
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="logo" href="#">
+                    <img class="logo__img" src="images/logo.png" alt="logo">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">SHOP</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">PAGE</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">BLOG</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="user-nav">
+                    <a class="user-nav__link" href="#">
+                        <img src="images/icons/user.svg" class="user-nav__link-img" alt="user icon">
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/icons/search.svg" class="user-nav__link-img" alt="search icon">
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/icons/heart.svg" class="user-nav__link-img" alt="heart icon">
+                        <span class="user-nav__number">3</span>
+                    </a>
+                    <a class="user-nav__link" href="#">
+                        <img src="images/icons/cart.svg" class="user-nav__link-img" alt="cart icon">
+                        <span class="user-nav__number">7</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </header>
+    <script src="js/main.min.js"></script>
 </body>
+
 </html>
